--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
     <meta charset="utf-8">
     <title>Студент Ткачев П.С.</title>
     <script type="text/javascript" src="script.js"></script>
+    <link rel="stylesheet" media="all" href="style.css">
   </head>
   <body>
     <h1>Студент Ткачев П.С.</h1>
     <p>Для того чтобы вывести на экран результат работы вашего скрипта, запустите консоль разработчика, нажав на F12</p>
     <a href="https://developers.google.com/web/tools/chrome-devtools">Подробное описание инструментов разработчика в Google Chrome</a>
+    <p>Если у вас всё получилось, увидите в консоли фразу Hello, world!»</p>
+    <h2>Перейти к отдельным примерам</h2>
+    <a href="lesson_1.html">Функции в JS</a>
+    <a href="lesson_2.html">Типы данных</a>
   </body>
 </html>
