--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
     <a href="https://developers.google.com/web/tools/chrome-devtools">Подробное описание инструментов разработчика в Google Chrome</a>
     <p>Если у вас всё получилось, увидите в консоли фразу Hello, world!»</p>
     <h2>Перейти к отдельным примерам</h2>
-    <a href="lesson_1.html">Функции в JS</a>
-    <a href="lesson_2.html">Типы данных</a>
+    <ul>
+      <li><a href="lesson_1.html">Функции в JS</a></li>
+      <li><a href="lesson_2.html">Типы данных</a></li>
+      <li><a href="lesson_3.html">Условия</a></li>
+      <li><a href="lesson_4.html">Циклы</a></li>
+    </ul>
   </body>
 </html>
