--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
       <li><a href="lesson_2.html">Типы данных</a></li>
       <li><a href="lesson_3.html">Условия</a></li>
       <li><a href="lesson_4.html">Циклы</a></li>
+      <li><a href="lesson_5.html">Ввод и вывод</a></li>
+      <li><a href="calc.html">Итоговое задание «Калькулятор»</a></li>
     </ul>
   </body>
 </html>
