--- a/calc.html
+++ b/calc.html
@@ -10,9 +10,9 @@
     <section>
       <h1>Итоговое задание «Калькулятор»</h1>
       <h3>Первое число</h3>
-      <input class="number_input" id="first_number" type="text" name="first_number" value="">
+      <input class="number_input" id="first_number" type=number name="first_number" value="">
       <h3>Второе число</h3>
-      <input class="number_input" id="second_number" type="text" name="second_number" value="">
+      <input class="number_input" id="second_number" type=number name="second_number" value="">
       <h3>Выбрать действие</h3>
       <div class="buttons_block">
         <button class="action_button" type="button" name="addition" onclick="summ()">Сложить числа</button>
