--- a/calc.html
+++ b/calc.html
@@ -10,13 +10,13 @@
     <section>
       <h1>Итоговое задание «Калькулятор»</h1>
       <h3>Первое число</h3>
-      <input class="number_input" id="first_number" type=number name="first_number" value="">
+      <input class="number_input" id="first_number" type="number" name="first_number" value="">
       <h3>Второе число</h3>
-      <input class="number_input" id="second_number" type=number name="second_number" value="">
+      <input class="number_input" id="second_number" type="number" name="second_number" value="">
       <h3>Выбрать действие</h3>
       <div class="buttons_block">
         <button class="action_button" type="button" name="addition" onclick="summ()">Сложить числа</button>
-        <button class="action_button" type="button" name="subtraction" onclick="">Вычесть числа</button>
+        <button class="action_button" type="button" name="subtraction" onclick="vijitanie()">Вычесть числа</button>
         <button class="action_button" type="button" name="multiplication" onclick="">Умножить числа</button>
         <button class="action_button" type="button" name="division" onclick="">Разделить числа</button>
       </div>
