--- a/calc.html
+++ b/calc.html
@@ -17,8 +17,8 @@
       <div class="buttons_block">
         <button class="action_button" type="button" name="addition" onclick="summ()">Сложить числа</button>
         <button class="action_button" type="button" name="subtraction" onclick="vijitanie()">Вычесть числа</button>
-        <button class="action_button" type="button" name="multiplication" onclick="">Умножить числа</button>
-        <button class="action_button" type="button" name="division" onclick="">Разделить числа</button>
+        <button class="action_button" type="button" name="multiplication" onclick="umnojnie()">Умножить числа</button>
+        <button class="action_button" type="button" name="division" onclick="delenie()">Разделить числа</button>
       </div>
       <hr>
       <h3>Здесь будет выведен результат</h3>
